# how_to_qgis

./: .gitignore
cpp/: README.md
cpp/exercices/ex1/part1/: main.cpp
cpp/exercices/ex1/part2/: Makefile  main.cpp
cpp/exercices/ex1/part3/: Makefile  main.cpp  printer.cpp
cpp/exercices/ex2/part2/: CMakeLists.txt
cpp/exercices/ex3/: README.md
cpp/exercices/ex3/part1/: CMakeLists.txt
cpp/exercices/ex3/part2/: CMakeLists.txt
cpp/exercices/ex4/: README.md
cpp/exercices/ex4/part1/: CMakeLists.txt
cpp/exercices/ex4/part1/src/: CMakeLists.txt  main.cpp
cpp/exercices/ex4/part2/src/lib/net/: CMakeLists.txt  client.cpp  client.h
cpp/exercices/statements/: main.cpp
cpp/support/: cpp.rst  env.rst  home.rst  qgis.rst  qt.rst
cpp/support/_build/doctrees/: cpp.doctree  env.doctree  environment.pickle  home.doctree  qgis.doctree  qt.doctree
cpp/support/_build/slides/: .buildinfo  console.html  cpp.html  env.html  home.html  objects.inv  qgis.html  qt.html  search.html  searchindex.js
cpp/support/imgs/: cmake_qgis.dia  cppenv.dia
exercices/ex1/: README.md
exercices/ex1/part1/: Makefile
exercices/ex1/part2/: hello.cpp  hello.h  helloworld.cpp  helloworld.h
exercices/ex1/part3/: printer.h
exercices/ex2/: README.md
exercices/ex2/part1/: CMakeLists.txt
exercices/ex2/part2/tests/: CMakeLists.txt  test_hello.cpp
exercices/ex4/: README.md
exercices/ex4/part1/: CMakeLists.txt
exercices/ex4/part1/src/: main.cpp  (+1 more)
python/: README.md
python/exercices/ex1/: README.md  map.py  windows.md
python/exercices/ex2/: README.md  proj.py
python/exercices/ex3/: README.md  app.py  browser.py  progressbar.py  projector.py
python/exercices/ex5/: CMakeLists.txt  Makefile
python/support/: conf.py  home.rst  python.rst  qgis.rst  qt.rst
support/: cpp.rst  home.rst
support/_build/slides/: cpp.html  env.html  genindex.html  home.html  searchindex.js
usage/: README.md
usage/support/: composer_atlas.rst  home.rst  install.rst  pres.rst  raster.rst  vector.rst
usage/support_desktop/: pres.rst  wms.rst
usage/support_server/: Makefile  client.rst  conf.py  config.rst  home.rst  install.rst  pres.rst  services.rst
(+166 files in other folders)
