CMAKE_MINIMUM_REQUIRED(VERSION 2.8.6)
PROJECT(remote)

# deps
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

FIND_PACKAGE(Qt4 REQUIRED)

# env
SET(MYLIB_DIR ${CMAKE_SOURCE_DIR}/src/lib)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCORE_EXPORT= -DGUI_EXPORT= -std=c++11")

# subdir
ADD_SUBDIRECTORY(src)
