CMAKE_MINIMUM_REQUIRED(VERSION 2.8.6)
PROJECT(standalone)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)

FIND_PACKAGE(Qt5Widgets REQUIRED)
FIND_PACKAGE(Qt5Gui REQUIRED)
FIND_PACKAGE(QGIS REQUIRED)

# SET(MYLIB_DIR ${CMAKE_SOURCE_DIR}/src/lib)
# SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DCORE_EXPORT= -DGUI_EXPORT= -std=c++11")

ADD_SUBDIRECTORY(src)
