SET(SOURCES
  main.cpp)

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(${MYLIB_DIR})
INCLUDE_DIRECTORIES(${QGIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR}/QtXml)

ADD_EXECUTABLE(standalone ${SOURCES} )
TARGET_LINK_LIBRARIES(standalone ${QT_LIBRARIES})
TARGET_LINK_LIBRARIES(standalone ${QGIS_CORE_LIBRARY})
TARGET_LINK_LIBRARIES(standalone ${QGIS_GUI_LIBRARY})
TARGET_LINK_LIBRARIES(standalone qgis_app)
