SET(SOURCES
  main.cpp
)

INCLUDE_DIRECTORIES(${QGIS_INCLUDE_DIR})

ADD_EXECUTABLE(standalone ${SOURCES} )

QT5_USE_MODULES(standalone Gui)
QT5_USE_MODULES(standalone Xml)
QT5_USE_MODULES(standalone Widgets)

TARGET_LINK_LIBRARIES(standalone ${QGIS_CORE_LIBRARY})
TARGET_LINK_LIBRARIES(standalone ${QGIS_GUI_LIBRARY})
